Add npm workspace

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 
 {
-    "image": "mcr.microsoft.com/vscode/devcontainers/typescript-node:0-16",
+    "image": "mcr.microsoft.com/vscode/devcontainers/javascript-node:0-16",
     "extensions": [
-        "maptz.regionfolder"
+        "maptz.regionfolder",
+        "formulahendry.code-runner"
     ],
 }
